<resources>
    <!--Activity labels -->
    <string name="app_name">SecScanQR</string>
    <string name="activity_generate">QR-Code Generator</string>
    <string name="activity_history">History</string>
    <string name="activity_history_details">History</string>
    <string name="title_activity_geo_generator">Geo Generator</string>
    <string name="title_activity_text_generator">Text Generator</string>
    <string name="title_activity_barcode_generate">Barcode Generator</string>
    <string name="title_activity_vcard_generator">VCard Generator</string>
    <string name="title_activity_wifi_generator">Wifi Generator</string>
    <!-- MainActivity-->
    <string name="title_format">Code format:</string>
    <string name="title_information">Code information:</string>
    <string name="default_text_main_activity">Press on the "Scan" Button to scan a QR-Code/Barcode</string>
    <string name="send_to">Share with:</string>
    <string name="xzing_label">Activate the flashlight using the volume keys</string>
    <string name="notice_clipoard">Copied to Clipboard</string>
    <!--MainActivity Errors-->
    <string name="error_scan_first">Scan a QR-Code first</string>
    <string name="error_canceled_scan">You canceled the scanning</string>
    <string name="error_add_to_database">Was not able to add QR-Code to the history</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_code_not_found">Barcode/Qr-Code not found</string>
    <!-- MainActivity Navigation-->
    <string name="title_scan">Scan</string>
    <string name="title_generate">Generate</string>
    <string name="title_history">History</string>
    <!-- MainActivity Action Navigation-->
    <string name="title_copy">Copy</string>
    <string name="title_share">Share</string>
    <string name="title_reset">Reset</string>
    <string name="title_openInWeb">Open in Web</string>
    <string name="title_createContact">Create Contact</string>

    <!-- GenerateActivity -->
    <string name="card_barcode_title">Barcode</string>
    <string name="card_barcode_hint">Create different kinds of Barcodes</string>
    <string name="card_text_title">Text</string>
    <string name="card_text_hint">Convert text into a QR-Code</string>
    <string name="card_location_title">Location</string>
    <string name="card_location_hint">Create a QR-Code in the format of a geo location</string>
    <string name="card_contact_title">Contact</string>
    <string name="card_contact_hint">Create a QR-Code in the format of a VCard</string>
    <string name="card_wifi_title">Wifi</string>
    <string name="card_wifi_hint">Create a QR-Code with the information of a wifi network</string>

    <!-- GenerateResultActivity-->
    <string name="btn_save">Save</string>
    <string name="toast_save">Saved in "SecScanQR" folder on the internal storage</string>
    <string name="toast_permission_needed">Permission is needed</string>
    <string name="toast_erorr">An error had occur</string>
    <string name="toast_error_data_to_big">Too much information for a QR-Code</string>

    <!-- BarcodeGeneratorActivity-->
    <string name="activity_barcode_generator">Barcode Generator</string>
    <string-array name="barcode_formats_array" translatable="false">
        <item>BARCODE</item>
        <item>CODE_128</item>
        <item>CODE_39</item>
        <item>EAN_13</item>
        <item>EAN_8</item>
        <item>ITF</item>
        <item>PDF_417</item>
        <item>UPC_A</item>
    </string-array>

    <!-- TextGeneratorActivity-->
    <string name="hint_text2qr">Here you can enter some text</string>
    <string name="tv_format">Format: </string>
    <string-array name="text_formats_array" translatable="false">
        <item>QR_CODE</item>
        <item>AZTEC</item>

    </string-array>
    <!-- TextGeneratorActivity Erorrs-->
    <string name="error_text_first">First type in some Text</string>
    <string name="error_generate">No valid input for this format</string>

    <!-- GeoGeneratorActivity-->
    <string name="hint_latitude">latitude example: 43.73</string>
    <string name="hint_longtitude">longtitude example: 10.73</string>
    <string-array name="formats_geo_array" translatable="false">
        <item>QR_CODE</item>
        <item>AZTEC</item>
    </string-array>
    <string name="cbLatitude">north</string>
    <string name="cbLongtitude">east</string>

    <!-- GeoGeneratorActivity Errors-->
    <string name="error_geo_first">First fill in valid values for the latitude and longtitude</string>

    <!-- VCARDGeneratorActivity-->
    <string name="hint_name">name</string>
    <string name="hint_fn">first name</string>
    <string name="hint_bday">birthday</string>
    <string name="hint_org">organization</string>
    <string name="hint_photo">URL to photo</string>
    <string name="hint_web">website</string>
    <string name="hint_email">e-mail</string>
    <string name="hint_mobil">mobil</string>
    <string name="hint_tele_work">telephone(work)</string>
    <string name="hint_tele_private">telephone(private)</string>
    <string name="hint_street">street</string>
    <string name="hint_plz">postcode</string>
    <string name="hint_city">city</string>
    <string name="hint_state">state</string>
    <string name="hint_country">country</string>
    <string name="hint_note">note</string>

    <!-- VCARDGeneratorActivity Errors-->
    <string name="error_fn_or_name_first">First type in a name or first name</string>

    <!-- WifiGeneratorActivity -->
    <string name="cbHidden">Hidden</string>
    <string name="hint_ssid">SSID</string>
    <string name="hint_password">Password</string>
    <string name="tv_encryption">Encryption: </string>
    <string-array name="text_formats_encryption" translatable="false">
        <item>None</item>
        <item>WEP</item>
        <item>WPA/WPA2</item>
    </string-array>

    <!-- HistoryActivity -->
    <string name="reset_database">Reset</string>
    <string name="share_database">Share</string>
    <!-- HistoryActivity Delete Dialog -->
    <string name="delete_history_dialog_message">All entries will be deleted!</string>
    <string name="delete_history_dialog_confirmation">OK</string>
    <string name="delete_history_dialog_cancel">Cancel</string>
    <string name="delete_entry_history_dialog_message">Do you want to delete this entry?</string>
    <string name="delete_entry_history_confirmation">Yes</string>
    <string name="delete_entry_history_cancel">No</string>

    <!-- HistoryActivity Errors-->
    <string name="error_not_in_database">Was not found in the history database</string>
    <string name="error_sqlexception">This format is not supported for the history feature</string>

    <!-- HistoryDetailsActivity-->
    <string name="notice_deleted_from_database">Deleted from the History</string>
    <!-- HistoryDetailsActivity Action Navigation-->
    <string name="title_delete">Delete</string>

    <!-- Optionsmenu-->
    <string name="settings_menu_about">About</string>
    <string name="settings_settings">Settings</string>

    <!-- AboutDialog-->
    <string name="about_dialog">About</string>
    <string name="copyright">Copyright Notice</string>
    <string name="copyright_holder">Copyright© 2017-2020 T-Dankworth</string>
    <string name="github_link">Find SecScanQR on Github: https://github.com/Fr4gorSoftware/SecScanQR</string>
    <string name="license">This App was created under the termsq of the GNU General Public License. For more information please check out the link below: https://www.gnu.org/licenses/gpl-3.0.en.html</string>
    <string name="logo_designer">The App logo was created by s-yous: https://github.com/s-yous</string>
    <string name="translator">English translation by Thore Dankworth: https://github.com/Fr4gorSoftware</string>
    <string name="zxing_license">The App uses the ZXING Library which is under the Apache 2.0 license. For more information please check out the link below: http://www.apache.org/licenses/LICENSE-2.0</string>
    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <!-- Scanner settings -->
    <string name="pref_header_scanner">Scanner</string>
    <string name="pref_header_history_settings">History</string>
    <string name="pref_header_search_engine_settings">Search Engine</string>

    <string name="pref_title_camera">Camera</string>
    <string-array name="pref_camera_entries">
        <item>back camera</item>
        <item>front camera</item>
    </string-array>
    <string-array name="pref_camera_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_auto_scan">Autostart scanner</string>
    <string name="pref_title_auto_clipboard">Smart clipboard</string>

    <string name="pref_title_day_night_mode">Day/Night mode (BETA Version)</string>
    <string-array name="pref_day_night_mode_entries">
        <item>Day (Needs a restart)</item>
        <item>Night (Needs a restart)</item>
    </string-array>
    <string-array name="pref_day_night_mode_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_history">Storing history</string>
    <string-array name="pref_history_entries">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_history_values" translatable="false">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string name="pref_title_search_engine">Search Engine</string>
    <string-array name="pref_search_engine_entries">
        <item>Bing</item>
        <item>DuckDuckGo</item>
        <item>Google</item>
        <item>Qwant</item>
        <item>Qwant Lite</item>
        <item>Startpage</item>
        <item>Yahoo</item>
        <item>Yandex (RUS)</item>
    </string-array>
    <string-array name="pref_search_engine_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="pref_title_barcode_search_enigne">Barcode Search Engine</string>
    <string-array name="pref_barcode_search_engine_entries">
        <item>No extra search engine for Barcodes</item>
        <item>Open Food Facts</item>
        <item>CodeCheck</item>
    </string-array>
    <string-array name="pref_barcode_search_engine_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
