<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_action_navigation_copy"
        android:icon="@drawable/ic_copy_24dp"
        android:title="@string/title_copy" />

    <item
        android:id="@+id/main_action_navigation_openInWeb"
        android:icon="@drawable/ic_open_in_browser_24dp"
        android:title="@string/title_openInWeb" />

    <item
        android:id="@+id/main_action_navigation_createContact"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/title_createContact" />

    <item
        android:id="@+id/main_action_navigation_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/title_share" />

    <item
        android:id="@+id/main_action_navigation_reset"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/title_reset" />

</menu>
