<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="false"
        android:entries="@array/pref_auto_scan_entries"
        android:entryValues="@array/pref_auto_scan_values"
        android:key="pref_auto_scan"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_auto_scan" />
    <ListPreference
        android:defaultValue="false"
        android:entries="@array/pref_auto_clipboard_entries"
        android:entryValues="@array/pref_auto_clipboard_values"
        android:key="pref_auto_clipboard"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_auto_clipboard" />

    <ListPreference
        android:defaultValue="true"
        android:entries="@array/pref_history_entries"
        android:entryValues="@array/pref_history_values"
        android:key="pref_history"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_history" />
</PreferenceScreen>
