<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?attr/backgroundcolor"
    android:minHeight="200dp">

    <TableRow android:minHeight="100dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:contentDescription="App Icon"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/info_version"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="end|center"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="?attr/textcolor" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/copyright"
            android:textColor="?attr/textcolor" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:text="@string/copyright_holder"
            android:textColor="?attr/textcolor"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:text="@string/license"
            android:textColor="?attr/textcolor"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:text="@string/logo_designer"
            android:textColor="?attr/textcolor"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:text="@string/translator"
            android:textColor="?attr/textcolor"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:text="@string/zxing_license"
            android:textColor="?attr/textcolor"
            android:textSize="12sp"
            android:textStyle="italic" />
    </TableRow>

</TableLayout>