<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="?attr/backgroundcolor"
tools:context="activities.generator.WifiGeneratorActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16sp"
    android:layout_marginBottom="65sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tfSSID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:textColor="?attr/textcolor"
            android:hint="@string/hint_ssid" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_weight="0.00"
            android:paddingStart="8dp"
            android:text="@string/tv_encryption" />

        <Spinner
            android:id="@+id/spinnerWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_weight="0.00" />

        <EditText
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_weight="0.00"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbHidden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:onClick="onClickCheckboxes"
            android:text="@string/cbHidden"
            android:textColor="?attr/textcolor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_weight="0.00"
            android:paddingStart="8dp"
            android:text="@string/tv_format" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:layout_weight="0.00" />


    </LinearLayout>

</ScrollView>

<Button
    android:id="@+id/btnGenerateWifi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:textColor="@android:color/white"
    android:layout_margin="10sp"
    android:text="@string/title_generate"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>