<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context="de.t_dankworth.secscanqr.activities.generator.GeoGeneratorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:checked="true"
                android:onClick="onClickCheckboxes"
                android:textColor="?attr/textcolor"
                android:text="@string/cbLatitude" />

            <EditText
                android:id="@+id/tfLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:textColor="?attr/textcolor"
                android:hint="@string/hint_latitude"
                android:inputType="numberDecimal" />

            <CheckBox
                android:id="@+id/cbLongtitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textcolor"
                android:layout_weight="0.00"
                android:checked="true"
                android:onClick="onClickCheckboxes"
                android:text="@string/cbLongtitude" />

            <EditText
                android:id="@+id/tfLongtitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textcolor"
                android:layout_weight="0.00"
                android:hint="@string/hint_longtitude"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textcolor"
                android:layout_weight="0.00"
                android:paddingStart="8dp"
                android:text="@string/tv_format" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textcolor"
                android:layout_weight="0.00" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnGenerateGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_margin="10sp"
        android:text="@string/title_generate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
